# lexord

./: .gitignore  Cargo.toml  Makefile.toml  fuzz-min.sh
.github/workflows/: test.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: vec_test.rs
fuzz/src/: lib.rs  main.rs  types.rs
fuzz_macros/: Cargo.toml
fuzz_macros/src/: lib.rs
golden/: Cargo.toml  golden.md
golden/src/: lib.rs
golden/tests/: golden.rs
lexord_derive/: Cargo.toml
lexord_derive/src/: derive.rs  lib.rs  tuples.rs
src/: helpers.rs  lib.rs  stdlib.rs  util.rs
src/stdlib/: float.rs  int.rs  string.rs  tuple.rs  varint.rs  vec.rs
src/util/: iterator.rs  test.rs
tests/: derive_test.rs
tests/type_test/: main.rs
