[package]
name = "lexord"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lexord_derive", "fuzz", "fuzz_macros", "golden"]

[dependencies]
thiserror = "1.0.59"
lexord_derive = { version = "0.1.0", path = "lexord_derive" }

[dev-dependencies]
afl = "0.15.7"
arbitrary = { version = "1.3.2", features = ["derive"] }
insta = "1.38.0"
