[package]
name = "lexord_fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[features]
golden = []

[dependencies]
afl = "0.15.7"
arbitrary = { version = "1.3.2", features = ["derive"] }
itertools = "0.13.0"
lexord = { version = "0.1.0", path = ".." }
lexord_fuzz_macros = { version = "0.1.0", path = "../fuzz_macros" }
paste = "1.0.15"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["extra-traits", "fold"] }
