[package]
name = "golden"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
arbitrary = "1.3.2"
itertools = "0.13.0"
lexord = { version = "0.1.0", path = ".." }
lexord_fuzz = { version = "0.1.0", path = "../fuzz", features = ["golden"] }
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = { version = "2.0.66", features = ["extra-traits"] }
